Fix full image wrap sizes on responsive

--- a/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_responsive.scss
@@ -265,6 +265,7 @@
 		.entry.post .entry-thumbnail, .entry.insprvw-review .entry-item-reviewed {
 			.image-wrap img {
 				margin: -30% 0 0 0;
+				width: 100%;
 			}			
 		}		
 	}	
